Switching to for the fork of clickhouse_sqlalchemy instead of sqlalchemy_clickhouse

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,6 +6,7 @@ services:
     build: .
     volumes:
       - .:/usr/src
+      #- ../clickhouse-sqlalchemy.git/clickhouse_sqlalchemy:/usr/src/clickhouse_sqlalchemy
     depends_on:
       - ch
 
