--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,6 +7,7 @@ services:
     volumes:
       - .:/usr/src
       #- ../clickhouse-sqlalchemy.git/clickhouse_sqlalchemy:/usr/src/clickhouse_sqlalchemy
+      #- ../aiochclient.git/aiochclient:/usr/src/aiochclient
     depends_on:
       - ch
 
