--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ license = "MIT"
 [tool.poetry.dependencies]
 python = "^3.7"
 SQLAlchemy = "^1.3"
-aiochclient = "^1.1"
+aiochclient = {git = "https://github.com/ods/aiochclient.git", branch="decimal_type"}
 clickhouse-sqlalchemy = {git = "https://github.com/ods/clickhouse-sqlalchemy.git", branch="column_table_prefix"}
 [tool.poetry.dev-dependencies]
 pytest = "^5.1"
