--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ aiochclient = {git = "https://github.com/ods/aiochclient.git", branch="decimal_t
 clickhouse-sqlalchemy = {git = "https://github.com/ods/clickhouse-sqlalchemy.git", branch="column_table_prefix"}
 [tool.poetry.dev-dependencies]
 pytest = "^5.1"
+pylint = "^2.3"
 
 [build-system]
 requires = ["poetry>=0.12"]
