--- a/setup.cfg
+++ b/setup.cfg
@@ -16,9 +16,10 @@ install_requires =
     clickhouse-sqlalchemy @ git+https://github.com/ods/clickhouse-sqlalchemy.git@column_table_prefix
     sqlalchemy>=1.3.0
 setup_requires =
-    pytest-runner
+    pytest-runner>=5.1
 tests_require =
-    pytest
+    pytest>=5.1.0
+    lovely-pytest-docker>=0.1.0
 
 [aliases]
 test = pytest
