Fixtures for connection and table; enable coverage

--- a/setup.cfg
+++ b/setup.cfg
@@ -18,11 +18,19 @@ install_requires =
 setup_requires =
     pytest-runner>=5.1
 tests_require =
-    pytest>=5.1.0
     lovely-pytest-docker>=0.1.0
+    pytest>=5.1.0
+    pytest-asyncio>=0.10.0
+    pytest-cov>=2.7.1
 
 [aliases]
 test = pytest
 
 [tool:pytest]
 testpaths = tests
+addopts = --strict-markers -r aP --tb=native --cov
+
+[coverage:run]
+branch = True
+source =
+    aiochsa
