Specify both PEP508 URL and dependency_links to make both setuptools and pip happy

--- a/setup.cfg
+++ b/setup.cfg
@@ -13,8 +13,10 @@ packages =
     aiochsa
 install_requires =
     aiochclient>=1.2.0
-    clickhouse-sqlalchemy @ git+https://github.com/ods/clickhouse-sqlalchemy.git@column_table_prefix
+    clickhouse_sqlalchemy @ git+https://github.com/ods/clickhouse-sqlalchemy.git@column_table_prefix
     sqlalchemy>=1.3.0
+dependency_links =
+    git+https://github.com/ods/clickhouse-sqlalchemy.git@column_table_prefix#egg=clickhouse_sqlalchemy-0.0.10
 setup_requires =
     pytest-runner>=5.1
 tests_require =
