--- a/setup.cfg
+++ b/setup.cfg
@@ -14,6 +14,7 @@ packages =
 install_requires =
     aiochclient>=1.2.0
     clickhouse_sqlalchemy @ git+https://github.com/ods/clickhouse-sqlalchemy.git@column_table_prefix
+    lark-parser>=0.7.5
     sqlalchemy>=1.3.0
 dependency_links =
     git+https://github.com/ods/clickhouse-sqlalchemy.git@column_table_prefix#egg=clickhouse_sqlalchemy-0.0.10
