Include type.lark into package

--- a/setup.cfg
+++ b/setup.cfg
@@ -26,6 +26,9 @@ tests_require =
     pytest-asyncio>=0.10.0
     pytest-cov>=2.7.1
 
+[options.package_data]
+aiochsa = type.lark
+
 [aliases]
 test = pytest
 
