--- a/setup.cfg
+++ b/setup.cfg
@@ -12,7 +12,7 @@ license = MIT
 packages =
     aiochsa
 install_requires =
-    aiochclient>=1.2.0
+    aiohttp>=3.6.0
     clickhouse_sqlalchemy @ git+https://github.com/ods/clickhouse-sqlalchemy.git@column_table_prefix
     lark-parser>=0.7.5
     sqlalchemy>=1.3.0
@@ -35,6 +35,8 @@ test = pytest
 [tool:pytest]
 testpaths = tests
 addopts = --strict-markers -r aP --tb=native --cov
+#filterwarnings =
+#    error
 
 [coverage:run]
 branch = True
