--- a/setup.cfg
+++ b/setup.cfg
@@ -14,7 +14,8 @@ packages =
 install_requires =
     aiohttp>=3.6.0
     clickhouse_sqlalchemy @ git+https://github.com/ods/clickhouse-sqlalchemy.git@column_table_prefix
-    lark-parser>=0.7.5
+    lark-parser>=0.7.7
+    simplejson>=3.16.0
     sqlalchemy>=1.3.0
 dependency_links =
     git+https://github.com/ods/clickhouse-sqlalchemy.git@column_table_prefix#egg=clickhouse_sqlalchemy-0.0.10
