--- a/setup.cfg
+++ b/setup.cfg
@@ -13,7 +13,7 @@ packages =
     aiochsa
 install_requires =
     aiohttp>=3.6.0
-    clickhouse_sqlalchemy @ git+https://github.com/ods/clickhouse-sqlalchemy.git@column_table_prefix
+    clickhouse_sqlalchemy>=0.1.2
     lark-parser>=0.7.7
     simplejson>=3.16.0
     sqlalchemy>=1.3.0
