--- a/setup.cfg
+++ b/setup.cfg
@@ -1,7 +1,7 @@
 [metadata]
 name = aiochsa
-version = 0.5
-description = An experimental wrapper around aiochclient to use it with SQLAlchemy
+version = 0.6
+description = An experimental Clickhouse Python/asyncio library for use with SQLAlchemy core
 long_description = file: README.rst
 author = Denis Otkidach
 author_email = denis.otkidach@gmail.com
@@ -12,13 +12,11 @@ license = MIT
 packages =
     aiochsa
 install_requires =
-    aiohttp>=3.6.0
+    aiohttp>=3.6.2,<4.0.0
     clickhouse_sqlalchemy>=0.1.2
     lark-parser>=0.7.7
     simplejson>=3.16.0
     sqlalchemy>=1.3.0
-dependency_links =
-    git+https://github.com/ods/clickhouse-sqlalchemy.git@column_table_prefix#egg=clickhouse_sqlalchemy-0.0.10
 setup_requires =
     pytest-runner>=5.1
 tests_require =
