Testing with tox

--- a/setup.cfg
+++ b/setup.cfg
@@ -34,8 +34,11 @@ test = pytest
 [tool:pytest]
 testpaths = tests
 addopts = --strict-markers -r aP --tb=native --cov
-#filterwarnings =
-#    error
+filterwarnings =
+    error
+    # The loop argument is deprecated since Python 3.8, and scheduled for
+    # removal in Python 3.10.
+    ignore::DeprecationWarning:aiohttp.connector
 
 [coverage:run]
 branch = True
