--- a/setup.cfg
+++ b/setup.cfg
@@ -19,6 +19,7 @@ install_requires =
     sqlalchemy>=1.3.0
 setup_requires =
     pytest-runner>=5.1
+    setuptools_scm>=3.3.3
 tests_require =
     lovely-pytest-docker>=0.1.0
     pytest>=5.1.0
