Prepare to 0.9 release

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,7 +1,7 @@
 [metadata]
 name = aiochsa
-version = 0.8
-description = An experimental Clickhouse Python/asyncio library for use with SQLAlchemy core
+version = 0.9
+description = Clickhouse Python/asyncio library for use with SQLAlchemy core
 long_description = file: README.rst
 author = Denis Otkidach
 author_email = denis.otkidach@gmail.com
