Add support for timezones (fixes #12)

--- a/setup.cfg
+++ b/setup.cfg
@@ -12,6 +12,7 @@ packages =
     aiochsa
 install_requires =
     aiohttp>=3.7.2,<4.0.0
+    backports.zoneinfo;python_version<"3.9"
     clickhouse_sqlalchemy>=0.1.4
     lark-parser>=0.7.7
     simplejson>=3.16.0
