Prepare to 0.11.0 release

--- a/setup.cfg
+++ b/setup.cfg
@@ -10,6 +10,7 @@ license = MIT
 [options]
 packages =
     aiochsa
+python_requires = >=3.7
 install_requires =
     aiohttp>=3.7.2,<4.0.0
     backports.zoneinfo;python_version<"3.9"
