--- a/setup.cfg
+++ b/setup.cfg
@@ -19,29 +19,41 @@ install_requires =
     simplejson>=3.16.0
     sqlalchemy>=1.3.0
 setup_requires =
-    pytest-runner>=5.1
     setuptools_scm>=3.3.3
-tests_require =
-    lovely-pytest-docker>=0.1.0
-    pytest>=5.1.0
-    pytest-asyncio>=0.10.0
-    pytest-cov>=2.7.1
 
 [options.package_data]
 aiochsa = type.lark
 
-[aliases]
-test = pytest
-
 [tool:pytest]
 testpaths = tests
-addopts = --strict-markers -r aP --tb=native --cov
+addopts = --strict-markers -r aP --tb=native
 filterwarnings = error
 
 [coverage:run]
 branch = True
-source =
-    aiochsa
+source = .
+omit =
+   setup.py
+   tests/*
+   .tox/*
 
 [coverage:report]
 show_missing = True
+
+
+[tox:tox]
+envlist = py{37,38,39},mypy
+
+[testenv]
+deps =
+    lovely-pytest-docker>=0.1.0
+    pytest>=5.1.0
+    pytest-asyncio>=0.10.0
+    pytest-cov>=2.7.1
+    six # Required by lovely-pytest-docker, but not included in its deps
+commands = pytest {posargs:--cov --cov-report=}
+
+[testenv:mypy]
+basepython = python3.8
+deps = mypy
+commands = mypy -p aiochsa -p tests
