--- a/setup.cfg
+++ b/setup.cfg
@@ -42,7 +42,7 @@ show_missing = True
 
 
 [tox:tox]
-envlist = py{37,38,39},mypy
+envlist = py{37,38,39},ch{19_16,20_3,20_8}
 
 [testenv]
 deps =
@@ -52,6 +52,18 @@ deps =
     pytest-cov>=2.7.1
     six # Required by lovely-pytest-docker, but not included in its deps
 commands = pytest {posargs:--cov --cov-report=}
+
+# The versions here are picked from from Altinity Stable Releases
+# https://docs.altinity.com/altinitystablerelease/releasenotes/
+[testenv:ch19_16]
+basepython = python3.8
+setenv = CLICKHOUSE_VERSION = 19.16.19.85
+[testenv:ch20_3]
+basepython = python3.8
+setenv = CLICKHOUSE_VERSION = 20.3.19.4
+[testenv:ch20_8]
+basepython = python3.8
+setenv = CLICKHOUSE_VERSION = 20.8.12.2
 
 [testenv:mypy]
 basepython = python3.8
