--- a/setup.cfg
+++ b/setup.cfg
@@ -15,7 +15,7 @@ install_requires =
     aiohttp>=3.7.2,<4.0.0
     backports.zoneinfo;python_version<"3.9"
     clickhouse_sqlalchemy>=0.1.5
-    lark-parser>=0.7.7
+    lark-parser>=0.11.2
     simplejson>=3.16.0
     sqlalchemy>=1.3.0
 setup_requires =
@@ -42,14 +42,14 @@ show_missing = True
 
 
 [tox:tox]
-envlist = py{37,38,39},ch{19_16,20_3,20_8}
+envlist = py{37,38,39},ch{19_16,20_3,20_8},mypy
 
 [testenv]
 deps =
     lovely-pytest-docker>=0.1.0
-    pytest>=5.1.0
-    pytest-asyncio>=0.10.0
-    pytest-cov>=2.7.1
+    pytest>=6.2.0
+    pytest-asyncio>=0.14.0
+    pytest-cov>=2.11.1
     six # Required by lovely-pytest-docker, but not included in its deps
 commands = pytest {posargs:--cov --cov-report=}
 
@@ -66,6 +66,16 @@ basepython = python3.8
 setenv = CLICKHOUSE_VERSION = 20.8.12.2
 
 [testenv:mypy]
-basepython = python3.8
-deps = mypy
+basepython = python3.9
+deps =
+    lovely-pytest-docker>=0.1.0
+    mypy
+    pytest>=5.1.0
+    pytest-asyncio>=0.10.0
+    pytest-cov>=2.7.1
+    six # Required by lovely-pytest-docker, but not included in its deps
 commands = mypy -p aiochsa -p tests
+
+[mypy]
+follow_imports = silent
+ignore_missing_imports = True
