Use extras to avoid copying tox deps

--- a/setup.cfg
+++ b/setup.cfg
@@ -21,8 +21,17 @@ install_requires =
 setup_requires =
     setuptools_scm>=3.3.3
 
+[options.extras_require]
+test =
+    lovely-pytest-docker>=0.1.0
+    pytest>=6.2.0
+    pytest-asyncio>=0.14.0
+    pytest-cov>=2.11.1
+    six # Required by lovely-pytest-docker, but not included in its deps
+
 [options.package_data]
 aiochsa = type.lark
+
 
 [tool:pytest]
 testpaths = tests
@@ -40,17 +49,16 @@ omit =
 [coverage:report]
 show_missing = True
 
+[mypy]
+follow_imports = silent
+ignore_missing_imports = True
+
 
 [tox:tox]
 envlist = py{37,38,39},ch{19_16,20_3,20_8},mypy
 
 [testenv]
-deps =
-    lovely-pytest-docker>=0.1.0
-    pytest>=6.2.0
-    pytest-asyncio>=0.14.0
-    pytest-cov>=2.11.1
-    six # Required by lovely-pytest-docker, but not included in its deps
+extras = test
 commands = pytest {posargs:--cov --cov-report=}
 
 # The versions here are picked from from Altinity Stable Releases
@@ -67,15 +75,6 @@ setenv = CLICKHOUSE_VERSION = 20.8.12.2
 
 [testenv:mypy]
 basepython = python3.9
-deps =
-    lovely-pytest-docker>=0.1.0
-    mypy
-    pytest>=5.1.0
-    pytest-asyncio>=0.10.0
-    pytest-cov>=2.7.1
-    six # Required by lovely-pytest-docker, but not included in its deps
+extras = test
+deps = mypy
 commands = mypy -p aiochsa -p tests
-
-[mypy]
-follow_imports = silent
-ignore_missing_imports = True
