Check and fix untyped; mark package as typed

--- a/setup.cfg
+++ b/setup.cfg
@@ -30,7 +30,9 @@ test =
     six # Required by lovely-pytest-docker, but not included in its deps
 
 [options.package_data]
-aiochsa = type.lark
+aiochsa =
+    type.lark
+    py.typed
 
 
 [tool:pytest]
@@ -50,18 +52,20 @@ omit =
 show_missing = True
 
 [mypy]
-follow_imports = silent
 ignore_missing_imports = True
+check_untyped_defs = True
+warn_redundant_casts = True
+warn_unused_ignores = True
 
 
 [tox:tox]
-envlist = py{37,38,39},ch{19_16,20_3,20_8},mypy
+envlist = py{37,38,39},ch{19_16,20_3,20_8,ch21_2},mypy
 
 [testenv]
 extras = test
 commands = pytest {posargs:--cov --cov-report=}
 
-# The versions here are picked from from Altinity Stable Releases
+# The versions here are picked from Altinity Stable Releases
 # https://docs.altinity.com/altinitystablerelease/releasenotes/
 [testenv:ch19_16]
 basepython = python3.8
@@ -72,9 +76,12 @@ setenv = CLICKHOUSE_VERSION = 20.3.19.4
 [testenv:ch20_8]
 basepython = python3.8
 setenv = CLICKHOUSE_VERSION = 20.8.12.2
+[testenv:ch21_2]  # Temporary, while no 21.* in Altinity's list
+basepython = python3.8
+setenv = CLICKHOUSE_VERSION = 21.2.5.5
 
 [testenv:mypy]
 basepython = python3.9
 extras = test
-deps = mypy
+deps = mypy>=0.812
 commands = mypy -p aiochsa -p tests
