--- a/setup.cfg
+++ b/setup.cfg
@@ -6,6 +6,15 @@ author = Denis Otkidach
 author_email = denis.otkidach@gmail.com
 url = https://github.com/ods/aiochsa
 license = MIT
+license_file = LICENSE
+classifiers =
+    Development Status :: 5 - Production/Stable
+    Intended Audience :: Developers
+    License :: OSI Approved :: MIT License
+    Programming Language :: Python :: 3.7
+    Programming Language :: Python :: 3.8
+    Programming Language :: Python :: 3.9
+    Topic :: Database :: Front-Ends
 
 [options]
 packages =
