--- a/setup.cfg
+++ b/setup.cfg
@@ -92,5 +92,5 @@ setenv = CLICKHOUSE_VERSION = 21.2.5.5
 [testenv:mypy]
 basepython = python3.9
 extras = test
-deps = mypy>=0.812
-commands = mypy -p aiochsa -p tests
+deps = mypy>=0.910
+commands = mypy --install-types --non-interactive -p aiochsa -p tests
