Python3.10: test and declare support

--- a/setup.cfg
+++ b/setup.cfg
@@ -14,6 +14,7 @@ classifiers =
     Programming Language :: Python :: 3.7
     Programming Language :: Python :: 3.8
     Programming Language :: Python :: 3.9
+    Programming Language :: Python :: 3.10
     Topic :: Database :: Front-Ends
 
 [options]
@@ -68,7 +69,7 @@ warn_unused_ignores = True
 
 
 [tox:tox]
-envlist = py{37,38,39},ch{19_16,20_3,20_8,ch21_2},mypy
+envlist = py{37,38,39,310},ch{19_16,20_3,20_8,ch21_2},mypy
 
 [testenv]
 extras = test
