Update the list of ClickHouse versions

--- a/setup.cfg
+++ b/setup.cfg
@@ -69,7 +69,7 @@ warn_unused_ignores = True
 
 
 [tox:tox]
-envlist = py{37,38,39,310},ch{19_16,20_3,20_8,ch21_2},mypy
+envlist = py{37,38,39,310},ch{19_16,20_3,20_8,21_1,21_3},mypy
 
 [testenv]
 extras = test
@@ -86,9 +86,13 @@ setenv = CLICKHOUSE_VERSION = 20.3.19.4
 [testenv:ch20_8]
 basepython = python3.8
 setenv = CLICKHOUSE_VERSION = 20.8.12.2
-[testenv:ch21_2]  # Temporary, while no 21.* in Altinity's list
-basepython = python3.8
-setenv = CLICKHOUSE_VERSION = 21.2.5.5
+[testenv:ch21_1]
+basepython = python3.9
+# No container for 21.1.10.3
+setenv = CLICKHOUSE_VERSION = 21.1.9.41
+[testenv:ch21_3]
+basepython = python3.9
+setenv = CLICKHOUSE_VERSION = 21.3.13.9
 
 [testenv:mypy]
 basepython = python3.9
