CI: test with different ClickHouse versions

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -17,6 +17,24 @@ jobs:
           - "3.9"
           - "3.10.0-rc.1"
 
+        clickhouse-version:
+          - "latest"
+
+        include:
+          # The versions here are picked from Altinity Stable Releases
+          # https://docs.altinity.com/altinitystablerelease/releasenotes/
+          - python-version: "3.8"
+            clickhouse-version: "19.16.19.85"
+          - python-version: "3.8"
+            clickhouse-version: "20.3.19.4"
+          - python-version: "3.8"
+            clickhouse-version: "20.8.12.2"
+          - python-version: "3.9"
+            # No container for 21.1.10.3
+            clickhouse-version: "21.1.9.41"
+          - python-version: "3.9"
+            clickhouse-version: "21.3.13.9"
+
     steps:
       - uses: actions/checkout@v2
 
@@ -29,4 +47,6 @@ jobs:
         run: pip install tox
 
       - name: Test
+        env:
+          CLICKHOUSE_VERSION: ${{ matrix.clickhouse-version }}
         run: tox -e py
