--- a/setup.cfg
+++ b/setup.cfg
@@ -73,6 +73,7 @@ envlist = py{37,38,39,310},ch{19_16,20_3,20_8,21_1,21_3},mypy
 
 [testenv]
 extras = test
+passenv = CLICKHOUSE_VERSION
 commands = pytest {posargs:--cov --cov-report=}
 
 # The versions here are picked from Altinity Stable Releases
