CI: update pip to avoid warning

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -43,6 +43,10 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
 
+      # Without this we eventually get warning
+      - name: Update Pip
+        run: pip install -U pip
+
       - name: Install Tox
         run: pip install tox
 
