Add ClickHouse 21.8 to CI

--- a/setup.cfg
+++ b/setup.cfg
@@ -69,7 +69,7 @@ warn_unused_ignores = True
 
 
 [tox:tox]
-envlist = py{37,38,39,310},ch{19_16,20_3,20_8,21_1,21_3},mypy
+envlist = py{37,38,39,310},ch{19_16,20_3,20_8,21_1,21_3,21_8},mypy
 
 [testenv]
 extras = test
@@ -93,7 +93,10 @@ basepython = python3.9
 setenv = CLICKHOUSE_VERSION = 21.1.9.41
 [testenv:ch21_3]
 basepython = python3.9
-setenv = CLICKHOUSE_VERSION = 21.3.13.9
+setenv = CLICKHOUSE_VERSION = 21.3.19.1
+[testenv:ch21_8]
+basepython = python3.9
+setenv = CLICKHOUSE_VERSION = 21.8.13.6
 
 [testenv:mypy]
 basepython = python3.10
